# apama_connectivity_rust

./: .gitignore  Cargo.toml  Makefile  README.md  RustInterface.h  RustTransport.cpp  RustTransport.h  build.rs  sample.yaml
examples/diag_codec/: Cargo.toml
examples/diag_codec/src/: lib.rs
examples/echo_transport/: Cargo.toml
examples/echo_transport/src/: lib.rs
examples/websocket_server/: Cargo.toml
examples/websocket_server/src/: lib.rs  main.bak.rs
src/: RustInterface.cpp  RustInterface.h  api.rs  ctypes.rs  echo.rs  lib.rs
src/api/: ctypes.rs  data_conversion.rs  plugin_impl_fn.rs
test/: pysysproject.xml
test/ApamaSample_cor_001/: run.py
test/ApamaSample_cor_001/Input/: DemoApp.mon  sample.yaml
test/RustPlugin_cor_001/: pysystest.xml  run.py
test/RustPlugin_cor_001/Input/: DemoApp.mon  sample.yaml
test/RustPlugin_cor_002/: pysystest.xml  run.py
test/RustPlugin_cor_002/Input/: sample.yaml
test/WebSocketSample_cor_001/: pysystest.xml  run.py
test/WebSocketSample_cor_001/Input/: DemoApp.mon  sample.yaml
