[package]
name = "websocket_server"
version = "0.1.0"
authors = ["Tej Babu Balireddi <tejbabu.balireddi@softwareag.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"tokio-tungstenite" = { version = "0.10.1"}
"tungstenite" = "0.10.1"
"tokio" = { version = "0.2.16", features = ["full"] }
"futures" = "0.3.4"
"futures-util" = { version = "0.3.4" }
"async-std" = "1.5.0"
"futures-channel" = "0.3.4"
"log" = "0.4.8"
"env_logger" = "0.7.1"
"rust_ap_connectivity" = { path = "../../" }

[lib]
crate-type = ["dylib"]